--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - travis_wait python src/main.py --small --distort-shift --distort-grow knn knn-pca log mlp svc
+  - travis_wait 30 python src/main.py --small --distort-shift --distort-grow lda
+  - travis_wait 30 python src/main.py --small lda qda parzen knn knn-pca log mlp svc
