--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - pip install -r requirements.txt
 script:
   - travis_wait 30 python src/main.py --small --distort-shift --distort-grow lda
-  - travis_wait 30 python src/main.py --small lda qda parzen knn knn-pca log mlp svc
+  - travis_wait 30 python src/main.py --small lda qda knn knn-pca log mlp svc
