--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 script:
   - python src/main.py knn --test-run --pca=43 --k=2 --weights=distance
   - python src/main.py log --test-run --c=3
-  - python src/main.py mlp --test-run --distort=all --alpha=0.01
-  - python src/main.py qda --test-run --small --activation='tanh'
+  - python src/main.py mlp --test-run --distort=all --alpha=0.01 --activation='tanh'
+  - python src/main.py qda --test-run --small
   - python src/main.py svc --test-run --similarity=sim_cos --gamma=3 --C=3 --kernel=sigmoid
   - python src/main.py lda --small
