--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - python src/main.py knn --test-run --pca=43 --k=2 --weights=distance
-  - python src/main.py log --test-run --c=3
-  - python src/main.py mlp --test-run --distort=all --alpha=0.01 --activation='tanh'
-  - python src/main.py qda --test-run --small
-  - python src/main.py svc --test-run --similarity=sim_cos --gamma=3 --C=3 --kernel=sigmoid
-  - python src/main.py lda --small
+  - python src/main.py --test-run --pca=43 knn --k=2 --weights=distance
+  - python src/main.py --test-run log --c=3
+  - python src/main.py --test-run --distort=all mlp --alpha=0.01 --activation='tanh'
+  - python src/main.py --test-run --small qda
+  - python src/main.py --test-run --similarity=sim_cos svc --gamma=3 --C=3 --kernel=sigmoid
+  - python src/main.py --small lda
