--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - python src/main.py --test-run --pca=43 knn --k=2 --weights=distance
+  - python src/main.py --test-run --pca=43 knn --n_neighbors=2 --weights=distance
   - python src/main.py --test-run log --C=3
   - python src/main.py --test-run --distort=all mlp --alpha=0.01 --activation='tanh'
   - python src/main.py --test-run --small qda
