--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,7 @@ script:
   - python src/main.py --test-run --small qda
   - python src/main.py --test-run --similarity=sim_cos svc --gamma=3 --C=3 --kernel=sigmoid
   - python src/main.py --small lda
-  - python src/import-images.py
+  - python src/main.py --test-set=default lda
+  - python src/main.py --test-set=live lda
+  - python src/main.py --small --test-set=live lda
+  - python src/main.py --test-set=eval --digits-per-class=12 lda
